--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
     <modules>
         <module>hello-world</module>
         <module>spring-boot-mybatis/spring-boot-mybatis-xml</module>
+        <module>spring-boot-mybatis/spring-boot-mybatis-xml-mulidatasource</module>
     </modules>
 </project>
